--- a/bdmultimedia/Templates/home.html
+++ b/bdmultimedia/Templates/home.html
@@ -28,14 +28,14 @@
 
 {% block footer %}
 
-<div class="col-md-10" align="center" style="color:darkgray">
-    <small>Nombre d'outils répertoriés : {{ all_outils.count }}</small>
-</div>
-<!--
+    <div class="col-md-10" align="center" style="color:darkgray">
+        <small>Nombre d'outils répertoriés : {{ all_outils.count }}</small>
+    </div>
+{% comment %}
 {% if user.is_authenticated %}
 <a href="{% url 'exporter_xls' %}">Expoter les données en fichier Excel</a>
 {% endif %}
--->
+{% endcomment %}
 
 
 {% endblock %}
