--- a/bdmultimedia/Templates/create.html
+++ b/bdmultimedia/Templates/create.html
@@ -1,80 +1,74 @@
-<!DOCTYPE html>
-{% extends 'base.html' %}
-
-{% block title %} Nouvel Outil {% endblock %}
-
-{% block body %}
-{% if user.is_authenticated %}
+<!DOCTYPE html> {% extends 'base.html' %} {% block title %} Nouvel Outil {% endblock %} {% block body %} {% if user.is_authenticated %}
 <div class="container-fluid">
 
     <form method="post" action="/">
-    <div class="row">
+        <div class="row">
 
-        <div class="col-sm-12 col-md-12">
+            <div class="col-sm-12 col-md-12">
 
-            <div class="panel panel-default">
-                <div class="panel-body">
+                <div class="panel panel-default">
+                    <div class="panel-body">
 
-                <form action="" method="POST">
-                    {% csrf_token %}
+                        <form action="" method="POST">
+                            {% csrf_token %}
 
-                    <div class="col-lg-12">
-                        <div id="div_id_titre" class="form-group  ">
-                            <label for="id_titre" class="control-label required-field">
+                            <div class="col-lg-12">
+                                <div id="div_id_titre" class="form-group  ">
+                                    <label for="id_titre" class="control-label required-field">
                             {{ form.titre.label_tag }}
                             </label>
-                            <div class="">
-                                <input class=" form-control" id="id_titre" maxlength="200" name="titre" type="text" required="required"/>
+                                    <div class="">
+                                        <input class=" form-control" id="id_titre" maxlength="200" name="titre" type="text" required="required" />
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
 
-                    <div class="col-lg-12">
-                        <div id="div_id_url" class="form-group  ">
-                            <label for="id_url" class="control-label required-field">
+                            <div class="col-lg-12">
+                                <div id="div_id_url" class="form-group  ">
+                                    <label for="id_url" class="control-label required-field">
                             {{ form.url.label_tag }}
                             </label>
-                            <div class="">
-                                <input class=" form-control" id="id_url" maxlength="200" name="url" type="url" required="required"/>
+                                    <div class="">
+                                        <input class=" form-control" id="id_url" maxlength="200" name="url" type="url" required="required" />
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
 
-                    <div class="col-lg-12">
-                        <div id="div_id_" class="form-group  ">
-                            <label for="id_lien_actif" class="control-label  ">
+                            <div class="col-lg-12">
+                                <div id="div_id_" class="form-group  ">
+                                    <label for="id_lien_actif" class="control-label  ">
                             {{ form.lien_actif.label_tag }}
                             </label>
-                                <input  id="id_lien_actif" name="lien_actif" type="checkbox" checked/>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-lg-3" id="div_id_date_verif">
-                                <label for="id_date_verif" class="control-label  ">
+                                    <input id="id_lien_actif" name="lien_actif" type="checkbox" checked/>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-lg-3" id="div_id_date_verif">
+                                    <label for="id_date_verif" class="control-label  ">
                                     {{ form.date_verif.label_tag }}
                                 </label>
                                     <div class="">
                                         <input class=" form-control" id="id_date_verif" name="date_verif" type="date" />
                                     </div><br>
-                        </div>
-                    </div>
-                    <div class="col-lg-12">
-                        <div id="div_id_site" class="form-group  ">
-                            <label for="id_site" class="control-label  ">
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div id="div_id_site" class="form-group  ">
+                                    <label for="id_site" class="control-label  ">
                             {{ form.site.label_tag }}
                             </label>
-                            <div class="">
-                                <input class=" form-control" id="id_site" maxlength="200" name="site" type="url" />
+                                    <div class="">
+                                        <input class=" form-control" id="id_site" maxlength="200" name="site" type="url" />
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
 
-                    <div class="col-lg-12">
-                        <div id="div_id_producteur_type" class="form-group  ">
-                                <label for="id_producteur_type" class="control-label">
+                            <div class="col-lg-12">
+                                <div id="div_id_producteur_type" class="form-group  ">
+                                    <label for="id_producteur_type" class="control-label">
                                     {{ form.producteur_type.label_tag }}
                                 </label>
-                                <div class="">
+                                    <div class="">
                                         <div class="radio">
                                             <label>
                                                 <input type="checkbox"  name="producteur_type" id="id_producteur_type_1" value="Particulier"> Particulier
@@ -107,35 +101,35 @@
                                             </label>
                                         </div>
 
+                                    </div>
                                 </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-10">
-                        <div id="div_autre_producteur" class="form-group">
-                            <div class="">
-                                <input class=" form-control" id="id_autre_producteur" maxlength="200" name="autre_producteur" type="text" placeholder="Si autre, précisez"/>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-12">
-                        <div id="div_id_producteur_nom" class="form-group  ">
-                            <label for="id_producteur_nom" class="control-label">
+
+                            <div class="col-lg-10">
+                                <div id="div_autre_producteur" class="form-group">
+                                    <div class="">
+                                        <input class=" form-control" id="id_autre_producteur" maxlength="200" name="autre_producteur" type="text" placeholder="Si autre, précisez" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div id="div_id_producteur_nom" class="form-group  ">
+                                    <label for="id_producteur_nom" class="control-label">
                             {{ form.producteur_nom.label_tag }}
                             </label>
-                            <div class="">
-                                <input class=" form-control" id="id_producteur_nom" maxlength="200" name="producteur_nom" type="text"/>
+                                    <div class="">
+                                        <input class=" form-control" id="id_producteur_nom" maxlength="200" name="producteur_nom" type="text" />
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <br>
+                            <br>
 
-                    <div class="col-lg-12">
-                        <div id="div_id_support_diffusion" class="form-group  ">
-                                <label for="id_support_diffusion" class="control-label">
+                            <div class="col-lg-12">
+                                <div id="div_id_support_diffusion" class="form-group  ">
+                                    <label for="id_support_diffusion" class="control-label">
                                     {{ form.support_diffusion.label_tag }}
                                 </label>
-                                <div class="">
+                                    <div class="">
                                         <div class="radio">
                                             <label>
                                                 <input type="checkbox"  name="support_diffusion" id="id_support_diffusion_1" value="Ordinateur"> Ordinateur
@@ -162,12 +156,12 @@
                                                 <input type="checkbox"  name="support_diffusion" id="id_support_diffusion_5" value="Consoles de JV"> Consoles de JV
                                             </label>
                                         </div>
-                                       <div class="radio">
+                                        <div class="radio">
                                             <label>
                                                 <input type="checkbox"  name="support_diffusion" id="id_support_diffusion_6" value="DVD"> DVD
                                             </label>
                                         </div>
-                                       <div class="radio">
+                                        <div class="radio">
                                             <label>
                                                 <input type="checkbox"  name="support_diffusion" id="id_support_diffusion_7" value="CD"> CD
                                             </label>
@@ -178,64 +172,64 @@
                                             </label>
                                         </div>
 
+                                    </div>
                                 </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-10">
-                        <div id="div_autre_support_diffusion" class="form-group">
-                            <div class="">
-                                <input class=" form-control" id="id_support_diffusion" maxlength="200" name="autre_support_diffusion" type="text" placeholder="Si autre, précisez"/>
                             </div>
-                        </div>
-                    </div>
+                            <div class="col-lg-10">
+                                <div id="div_autre_support_diffusion" class="form-group">
+                                    <div class="">
+                                        <input class=" form-control" id="id_support_diffusion" maxlength="200" name="autre_support_diffusion" type="text" placeholder="Si autre, précisez" />
+                                    </div>
+                                </div>
+                            </div>
 
 
-                    <div class="col-lg-3">
-                        <div id="div_id_duree" class="form-group">
-                            <label for="id_duree" class="control-label">
+                            <div class="col-lg-3">
+                                <div id="div_id_duree" class="form-group">
+                                    <label for="id_duree" class="control-label">
                             {{ form.duree.label_tag }}
                             </label>
-                            <div class="">
-                                <input class=" form-control" id="id_duree" maxlength="8" name="duree" type="text" placeholder="hh:mm:ss"/>
+                                    <div class="">
+                                        <input class=" form-control" id="id_duree" maxlength="8" name="duree" type="text" placeholder="hh:mm:ss" />
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
 
 
-                    <div class="col-lg-3">
-                        <div id="div_nb_pages" class="form-group">
-                            <label for="id_nb_pages" class="control-label">
+                            <div class="col-lg-3">
+                                <div id="div_nb_pages" class="form-group">
+                                    <label for="id_nb_pages" class="control-label">
                             {{ form.nb_pages.label_tag }}
                             </label>
-                            <div class="">
-                                <input class=" form-control" id="id_nb_pages"  name="nb_pages" type="number"/>
+                                    <div class="">
+                                        <input class=" form-control" id="id_nb_pages" name="nb_pages" type="number" />
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-lg-3" id="div_id_mise_en_ligne_date" >
-                                <label for="id_mise_en_ligne_date" class="control-label  ">
+                            <div class="form-group">
+                                <div class="col-lg-3" id="div_id_mise_en_ligne_date">
+                                    <label for="id_mise_en_ligne_date" class="control-label  ">
                                     {{ form.mise_en_ligne_date.label_tag }}
                                 </label>
                                     <div class="">
                                         <input class=" form-control" id="id_mise_en_ligne_date" name="mise_en_ligne_date" type="date" />
                                     </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-lg-3" id="div_id_depouillement_date">
-                                <label for="id_depouillement_date" class="control-label  ">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-lg-3" id="div_id_depouillement_date">
+                                    <label for="id_depouillement_date" class="control-label  ">
                                     {{ form.depouillement_date.label_tag }}
                                 </label>
                                     <div class="">
                                         <input class=" form-control" id="id_depouillement_date" name="depouillement_date" type="date" />
                                     </div>
-                        </div>
-                    </div>
+                                </div>
+                            </div>
 
 
 
-                   <!-- <div class="form-group  ">
+                            <!-- <div class="form-group  ">
                         <label class="control-label">
                         {{ form.liste_materiau.label_tag }}
                         </label>
@@ -252,26 +246,23 @@
                         </div>
                     </div>  -->
 
-                    <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-success"> Enregistrer </button>
-                        </div>
+                            <div class="form-group">
+                                <div class="col-sm-offset-2 col-sm-10">
+                                    <button type="submit" class="btn btn-success"> Enregistrer </button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
-                </form>
                 </div>
             </div>
-    </div>
-</div>
+        </div>
     </form>
 </div>
 
 {% else %}
 <div class="col-md-1"></div>
-<div class="text-danger"><h4> Vous devez vous identifier pour créer un nouvel outil </h4></div>
+<div class="text-danger">
+    <h4> Vous devez vous identifier pour créer un nouvel outil </h4>
 </div>
-{% endif %}
-
-
-
-
-{% endblock %}
+</div>
+{% endif %} {% endblock %}
