--- a/bdmultimedia/Templates/home.html
+++ b/bdmultimedia/Templates/home.html
@@ -1,41 +1,33 @@
 <!DOCTYPE html>
 <html lang="fr">
-{% extends 'base.html' %}
-
-{% block body %}
+{% extends 'base.html' %} {% block body %}
 
 <div class="container-fluid">
     <div class="col-md-10">
-    <div class="page-header">
-        <h4> Liste des outils disponibles: </h4>
-    </div>
+        <div class="page-header">
+            <h4> Liste des outils disponibles: </h4>
+        </div>
 
         {% if all_outils %}
-            <ul>
-                {% for outil in all_outils %}
-                <li><a href="{% url 'detail' outil.id %}"> {{ outil.titre }} </a></li>
-                {% endfor %}
-            </ul>
+        <ul>
+            {% for outil in all_outils %}
+            <li><a href="{% url 'detail' outil.id %}"> {{ outil.titre }} </a></li>
+            {% endfor %}
+        </ul>
 
         {% else %}
 
-        <div class="text-danger"><h6> Aucun outil n'est disponible </h6></div>
+        <div class="text-danger">
+            <h6> Aucun outil n'est disponible </h6>
+        </div>
 
         {% endif %}
     </div>
 </div>
-{% endblock %}
+{% endblock %} {% block footer %}
 
-{% block footer %}
-
-    <div class="col-md-10" align="center" style="color:darkgray">
-        <small>Nombre d'outils répertoriés : {{ all_outils.count }}</small>
-    </div>
-{% comment %}
-{% if user.is_authenticated %}
-<a href="{% url 'exporter_xls' %}">Expoter les données en fichier Excel</a>
-{% endif %}
-{% endcomment %}
-
-
-{% endblock %}
+<div class="col-md-10" align="center">
+    <small>{{ all_outils.count }} outils répertoriés</small>
+</div>
+{% comment %} {% if user.is_authenticated %}
+<a href="{% url 'exporter_xls' %}">Expoter les données en fichier Excel</a> {% endif %} {% endcomment %} {% endblock %}
