Exportation excel terminée

--- a/bdmultimedia/Templates/base.html
+++ b/bdmultimedia/Templates/base.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Répertoire d'outils de médiation de la musique{% endblock %}</title>
+    <title>{% block title %}Catalogue raisonné de dispositifs de médiation de la musique{% endblock %}</title>
     {% load staticfiles %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="../static/style.css">
@@ -24,7 +24,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-                    <a class="navbar-brand" href="{% url 'home' %}">Répertoire d'outils de médiation de la musique</a>
+                    <a class="navbar-brand" href="{% url 'home' %}">Catalogue raisonné de dispositifs de médiation de la musique</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="barreNav">
