--- a/bdmultimedia/Templates/home.html
+++ b/bdmultimedia/Templates/home.html
@@ -5,7 +5,7 @@
 <div class="container-fluid">
     <div class="col-md-10">
         <div class="page-header">
-            <h4> Liste des outils disponibles: </h4>
+            <h4> Liste des dispositifs disponibles: </h4>
         </div>
 
         {% if all_outils %}
@@ -27,7 +27,6 @@
 {% endblock %} {% block footer %}
 
 <div class="col-md-10" align="center">
-    <small>{{ all_outils.count }} outils répertoriés</small>
+    <small>{{ all_outils.count }} dispositifs répertoriés</small>
 </div>
-{% comment %} {% if user.is_authenticated %}
-<a href="{% url 'exporter_xls' %}">Expoter les données en fichier Excel</a> {% endif %} {% endcomment %} {% endblock %}
+ {% endblock %}
