Interfaces de gestion, changements du procédurier
Pas sur le serveur car problème de migration

--- a/bdmultimedia/Templates/base.html
+++ b/bdmultimedia/Templates/base.html
@@ -24,7 +24,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-                    <a class="navbar-brand" href="{% url 'home' %}">Catalogue raisonné de dispositifs de médiation de la musique</a>
+                    <a class="navbar-brand" href="{% url 'home' %}">C R D M M</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="barreNav">
@@ -64,6 +64,11 @@
                             <a href='/export/xls'><span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>&nbsp; Exporter</a>
                         </li>
                     </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="">
+                            <a href='/gerer'><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>&nbsp; Gérer</a>
+                        </li>
+
                     {% endif %}
                 </div>
 
