--- a/bdmultimedia/Templates/registration/login.html
+++ b/bdmultimedia/Templates/registration/login.html
@@ -59,7 +59,7 @@
                                     <input class="form-control" id="id_password" name="password" placeholder="********" required="required" title="" type="password">
                                 </div>
 
-                                <input type="hidden" name="next" value="{% url 'home' %}"/>
+                                <input type="hidden" name="next" value="{% url 'aLaUne' %}"/>
                                 <button type="submit" class="btn btn-primary">Entrer</button>
                             </fieldset>
                         </form>
