--- a/bdmultimedia/Templates/list_detail.html
+++ b/bdmultimedia/Templates/list_detail.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 {% extends 'base.html' %}
 
-{% block title %} Outil de médiation - {{outil.titre}} {% endblock %}
+{% block title %} Dispositif de médiation - {{outil.titre}} {% endblock %}
 {% load i18n customtags %}
 {% block body %}
 <!--
