--- a/bdmultimedia/Templates/results.html
+++ b/bdmultimedia/Templates/results.html
@@ -14,11 +14,11 @@
         <h3 class="page-header">Résultats de la recherche<br>
             <small style="text-transform : lowercase;">
                 {% if data_total == 0 %}
-                    Aucun outil trouvé
+                    Aucun dispositif trouvé
                 {% elif data_total == 1 %}
-                    1 outil trouvé
+                    1 dispositif trouvé
                 {% else %}
-                    {{ data_total }} outils trouvés
+                    {{ data_total }} dispositifs trouvés
                 {% endif %}
             </small>
         </h3>
