--- a/bdmultimedia/Templates/base.html
+++ b/bdmultimedia/Templates/base.html
@@ -6,7 +6,7 @@
     <title>{% block title %}Catalogue raisonné de dispositifs de médiation de la musique{% endblock %}</title>
     {% load staticfiles %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
     <link rel="icon" type="image/png" href="/static/media/icone.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -25,7 +25,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="{% url 'aLaUne' %}">C R D M M</a>
+                        <a class="navbar-brand" href="{% url 'aLaUne' %}"><img src="../static/media/icone_blanc.png" height="25px"/></a>
                     </div>
 
                     <div class="collapse navbar-collapse" id="barreNav">
